Added ability to view log & track usage

--- a/OPA/Views/Home/Index.cshtml
+++ b/OPA/Views/Home/Index.cshtml
@@ -39,6 +39,7 @@
         {
             <br/>
             <h2>Administrator Functions</h2>
+            <p>@Html.ActionLink("View Log", "LogFile", "Home", null, new { @class = "btn btn-default" })</p>
             <p>@Html.ActionLink("Manage Users", "ManageUsers", "Manage", null, new { @class = "btn btn-default" })</p>
             <p>@Html.ActionLink("Manage Value Sets", "ValueSets", "Home", null, new { @class = "btn btn-default" })</p>
             <p>@Html.ActionLink("Don't Panic", "GetRawData", "Home", null, new { @class = "btn btn-default" })</p>
