--- a/OPA/Views/Payment/Index.cshtml
+++ b/OPA/Views/Payment/Index.cshtml
@@ -28,7 +28,7 @@
             <th>@Html.DisplayNameFor(model => model.Source)</th>
             <th>@Html.DisplayNameFor(model => model.DonorName)</th>
             <th>@Html.DisplayNameFor(model => model.PaymentMethod)</th>
-            <th style="max-width: 15%;">@Html.DisplayNameFor(model => model.PaymentDetails)</th>
+            <th>@Html.DisplayNameFor(model => model.PaymentDetails)</th>
             <th>@Html.DisplayNameFor(model => model.Amount)</th>
             <th>@Html.DisplayNameFor(model => model.Fee)</th>
             <th>@Html.DisplayNameFor(model => model.Net)</th>
