--- a/OPA/Views/Financial/CreatePledge.cshtml
+++ b/OPA/Views/Financial/CreatePledge.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-4">
-                    @Html.DropDownListFor(model => model.Year, new SelectList(new[] { "2018", "2017" }), new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Year, (List<SelectListItem>)ViewBag.YearList, new { @class = "form-control" })
                 </div>
             </div>
 
