Separated the SMTP from the owner email address

--- a/OPA/Views/Shared/_Footer.cshtml
+++ b/OPA/Views/Shared/_Footer.cshtml
@@ -14,7 +14,7 @@
     <img src="~/Content/images/logo-small.png" alt="Org Logo">
     <div id="footer-content">
         <h3>Contact</h3>
-        <p>Content questions or feedback: <a href="mailto:@Utilities.AdminEmail">@Utilities.AdminName</a></p>
+        <p>Content questions or feedback: <a href="mailto:@Utilities.SmtpEmail">@Utilities.SmtpName</a></p>
         <p>Copyright &copy; @DateTime.Now.Year @Utilities.AppName</p>
     </div>
 </div>
