--- a/OPA/Views/People/Edit.cshtml
+++ b/OPA/Views/People/Edit.cshtml
@@ -162,7 +162,18 @@
                         <tr><th colspan="6" class="text-center"><em>Spouse</em></th></tr>
                             <tr>
                                 <td>@Html.DisplayFor(modelItem => Model.Spouse.FullName)</td>
-                                <td class="fit">@Html.ActionLink("View/Edit", "Edit", new { id = Model.Spouse.Id }, new { @class = "btn btn-default" })</td>
+                                <td class="fit">
+                                    @Html.ActionLink("View/Edit", "Edit", new {id = Model.Spouse.Id}, new {@class = "btn btn-default"})
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        using (Html.BeginForm("RemoveSpouse", "People", FormMethod.Post, new { style = "display: inline-block" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            @Html.Hidden("personId", Model.Id)
+                                            <input type="submit" value="Remove" class="btn btn-default" onclick="return confirm('Remove spouse, are you sure?')" />
+                                        }
+                                    }
+                                </td>
                             </tr>
                     }
 
