--- a/OPA/Views/Contact/EditAddress.cshtml
+++ b/OPA/Views/Contact/EditAddress.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <div class="modal-body">
-    <div class="alert alert-danger">
+    <div class="alert alert-info">
         Please use this form only to correct address details.<br />
         For address changes, please delete the contact address and create a new one.
     </div>
