--- a/OPA/Views/Manage/EditUser.cshtml
+++ b/OPA/Views/Manage/EditUser.cshtml
@@ -38,11 +38,8 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Admin, htmlAttributes: new { @class = "control-label col-md-4" })
-                <div class="col-md-4">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Admin)
-                        @Html.ValidationMessageFor(model => model.Admin, "", new { @class = "text-danger" })
-                    </div>
+                <div class="col-md-1">
+                    @Html.EditorFor(model => model.Admin, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
