--- a/OPA/Views/Organization/Create.cshtml
+++ b/OPA/Views/Organization/Create.cshtml
@@ -26,7 +26,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal col-md-6">
+    <div class="form-horizontal col-md-8">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -38,11 +38,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-8">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Active)
-                    @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-1">
+                @Html.EditorFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
