--- a/OPA/Views/Organization/Edit.cshtml
+++ b/OPA/Views/Organization/Edit.cshtml
@@ -51,11 +51,8 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            <div class="checkbox">
-                                @Html.EditorFor(model => model.Active)
-                                @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
-                            </div>
+                        <div class="col-md-1">
+                            @Html.EditorFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
                         </div>
                     </div>
 
