--- a/OPA/Views/People/Create.cshtml
+++ b/OPA/Views/People/Create.cshtml
@@ -30,23 +30,6 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @if (Model.ForCouple)
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.ForCouple, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-4">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.ForCouple)
-                        @Html.ValidationMessageFor(model => model.ForCouple, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        }
-        else
-        {
-            @Html.HiddenFor(model => model.ForCouple)
-        }
-
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
@@ -100,13 +83,24 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Active)
-                    @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-1">
+                @Html.EditorFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
+
+        @if (Model.ForCouple)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.ForCouple, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-1">
+                    @Html.EditorFor(model => model.ForCouple, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+        }
+        else
+        {
+            @Html.HiddenFor(model => model.ForCouple)
+        }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
