--- a/OPA/Views/People/Edit.cshtml
+++ b/OPA/Views/People/Edit.cshtml
@@ -120,11 +120,8 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-4" })
-                <div class="col-md-6">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Active)
-                        @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
-                    </div>
+                <div class="col-md-1">
+                    @Html.EditorFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
         }
@@ -170,7 +167,7 @@
                                         {
                                             @Html.AntiForgeryToken()
                                             @Html.Hidden("personId", Model.Id)
-                                            <input type="submit" value="Remove" class="btn btn-default" onclick="return confirm('Remove spouse, are you sure?')" />
+                                            <input type="submit" value="Separate" class="btn btn-default" onclick="return confirm('Remove spouse, are you sure?')" />
                                         }
                                     }
                                 </td>
@@ -281,12 +278,7 @@
                             <td class="hidden-xs">@Html.DisplayFor(modelItem => address.Country)</td>
                             <td>
                                 @Html.ActionLink("Correct", "EditAddress", "Contact", new { id = address.Id }, new { @class = "btn btn-default modal-link" })
-                                @using (Html.BeginForm("DeleteAddress", "Contact", null, FormMethod.Post, new { style = "display: inline-block" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    @Html.Hidden("contactAddressId", address.Id)
-                                    <input type="submit" value="Delete" class="btn btn-default" onclick="return confirm('Delete contact address, are you sure?')" />
-                                }
+                                @Html.ActionLink("Delete", "DeleteAddress", "Contact", new { contactAddressId = address.Id }, new { @class = "btn btn-default modal-link" })
                             </td>
                         </tr>
                     }
