Adjusted updates to prevent legacy ids from being over ridden.

--- a/OPA/Views/Financial/Donations.cshtml
+++ b/OPA/Views/Financial/Donations.cshtml
@@ -60,7 +60,7 @@
                 buttons: [{
                     extend: "csv",
                     text: "Export data",
-                    title: "Pledge Summary",
+                    title: "Donation Summary",
                     className: "pull-right btn btn-default"
                 }],
                 language: { search: "_INPUT_", searchPlaceholder: "Search..." }
