--- a/OPA/Views/Shared/_Layout.cshtml
+++ b/OPA/Views/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="https://donorbox.org/install-popup-button.js" type="text/javascript" defer></script>
-    <script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
+    <script> window.DonorBox = { widgetLinkClassName: "custom-dbox-popup" } </script>
+
     @RenderSection("Scripts", required: false)
 
     <script type="text/javascript">
