--- a/OPA/Views/Manage/EditUser.cshtml
+++ b/OPA/Views/Manage/EditUser.cshtml
@@ -23,16 +23,19 @@
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
-            @if (Model.PersonId != null)
-            {
-                @Html.HiddenFor(model => model.PersonId)
-            }
 
             <div class="form-group">
                 @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", disabled="disabled" } })
                     @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.PersonName, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-5">
+                    @Html.DropDownListFor(model => model.PersonId, (List<SelectListItem>)ViewBag.UnassignedPeopleList, "Assign Person...", new { @class = "form-control" })
                 </div>
             </div>
 
